--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 
     $.ajax({
+       type: "GET",
+      
       url: "https://cpmet-ufpel.github.io/megatron/data/chuva.json?"+ajaxTime,
       dataType: "json"
     })
