html para visualizar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <table id="chuva">
-    <tr><th>Estação</th><th>1</th><th>2</th><th>3</th></tr>
+    <tr><th>Estação</th><th>1h</th><th>2h</th><th>3h</th></tr>
     
   </table>
 
@@ -34,7 +34,7 @@
 
           var dados_html = '';
           
-          for(var estacao in data) {]
+          for(var estacao in data) {
              console.log(data[estacao]);
             var cell1 = row.insertCell(0);
             var cell2 = row.insertCell(1);
